--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,5 @@
 python-telegram-bot==20.7
 aiohttp==3.9.1
-pandas==2.2.2
-numpy==1.26.4
-ta==0.10.2
 python-dotenv==1.0.0
 flask==3.0.0
-gunicorn==21.2.0
+requests==2.31.0
