--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
 python-telegram-bot==20.7
-aiohttp==3.8.6
-pandas==1.5.3
-numpy==1.23.5
-ta==0.10.2
+aiohttp==3.9.5
+requests==2.31.0
 python-dotenv==1.0.1
 flask==3.0.3
 gunicorn==22.0.0
